--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,19 @@
 version: '2'
 
 services:
+    postgres:
+        image: postgres:9.6
+        container_name: postgres
+        environment:
+          - POSTGRES_DB=demodb
+          - POSTGRES_USER=postgres
+          - POSTGRES_PASSWORD=securepassword
+          - TZ=GMT
+        volumes:
+          - ./_data/postgres:/var/lib/postgresql/data"
+        ports:
+          - 5432:5432
+
     consul:
         container_name: consul
         image: consul:latest
